--- a/style.css
+++ b/style.css
@@ -1,5 +1,120 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
 
+:root {
+    --primary-color : #DB2777;
+    --dark-color: #4B5563;
+    --off-white:#E5E7EB;
+}
+
+
 body {
     font-family:'Rubik', sans-serif; ;
+}
+
+h1 {
+    margin: 2.5rem 0rem;
+}
+
+/* ------container----- */
+.container {
+    padding: 0rem 1rem;
+}
+.container-center{
+    max-width: 600px;
+    margin: auto;
+}
+
+/*------ Links----- */
+.link {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+
+}
+.primary-link {
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
+.secondary-link {
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
+
+}
+
+/* look into BEM naming convention for css */
+
+/*----- Lists ------*/
+
+.list-non-bullet {
+    list-style: none;
+}
+.list-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
+/* ------navigation------ */
+
+.navigation {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1.5rem;
+    border-bottom-left-radius: 1rem;
+}
+.navigation .link {
+    color: white;
+    
+}
+.navigation .nav-pills {
+    text-align: right;
+}
+.navigation .nav-brand {
+    font-weight: bold;
+    font-size: 2rem;
+}
+.navigation .link-active {
+    font-weight: bold;
+}
+
+/* -----header------ */
+.hero {
+    padding:2rem;
+}
+.hero .hero-img {
+    max-width: 300px;
+    display: block;
+    margin: auto;
+}
+.hero .hero-heading {
+    color: var(--dark-color);
+    padding-top: 1rem;
+}
+
+/* -----sections------- */
+
+.section {
+    padding: 1.5rem;
+}
+.section h1{
+    text-align: center;
+}
+
+.off-white {
+    background-color: var(--off-white);
+}
+
+/* -----footer------ */
+.footer {
+ background-color: var(--primary-color);
+ padding: 2rem 1rem;
+ color:white;
+ text-align: center;
+ border-top-right-radius: 1rem;
+}
+.footer .link {
+    color: white;
+}
+.footer ul {
+    padding-inline-start: 0px;
 }
